# ralph-loop-cc-tdd-wt-vibe-kanban-template

./: .claude.json  .env.example  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  AGENTS.md  AGENT_LEARNINGS.md  AGENT_REQUESTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.embedded  Makefile.python  Makefile.typescript  README.md  SECURITY.md  TODO.md  lychee.toml  mkdocs.yaml  pyproject.toml  test_file.txt
.claude/: .claude.json  settings.json
.claude/rules/: compound-learning.md  context-management.md  core-principles.md
.claude/scripts/: statusline-json-structure.json  statusline.sh
.claude/skills/auditing-accessibility/: SKILL.md
.claude/skills/auditing-website-accessibility/: SKILL.md
.claude/skills/auditing-website-usability/: SKILL.md
.claude/skills/committing-staged-with-message/: SKILL.md
.claude/skills/compacting-context/: SKILL.md
.claude/skills/designing-mas-plugins/: SKILL.md
.claude/skills/generating-interactive-userstory-md/: SKILL.md
.claude/skills/generating-prd-json-from-prd-md/: SKILL.md
.claude/skills/generating-prd-md-from-userstory-md/: SKILL.md
.claude/skills/generating-writeup/: SKILL.md  template.md
.claude/skills/researching-codebase/: SKILL.md
.claude/skills/researching-website-design/: SKILL.md
.claude/skills/securing-mas/: SKILL.md
.claude/skills/testing-python/: SKILL.md
.devcontainer/ollama/: devcontainer.json
.devcontainer/project/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: codeql.yaml  write-llms-txt.yaml
docs/: NAMING.md  PRD.md  TEMPLATE_USAGE.md  UserStory.md
docs/audits/: quality-audit-2026-03.md
docs/research/: engine-model-ui-adapter-contracts.md  ralph-cli-rewrite.md
ralph/: CHANGELOG.md  CONTRIBUTING.md  LEARNINGS.md  README.md  REQUESTS.md  TEMPLATE_USAGE.md  TODO.md  progress.txt
ralph/docs/: FAILURE_MODES.md  README.md  UI.md  prd.json  progress.txt
ralph/docs/templates/: judge.prompt.md  prd.json.template  prompt.md  story.prompt.md
ralph/docs/templates/project/: CHANGELOG.template.md  LICENSE.template.md  README.template.md  pyproject.template.toml
ralph/scripts/: archive.sh  clean.sh  generate_prd_json.py  init.sh  parallel_ralph.sh  ralph-in-worktree.sh  ralph.sh  reorganize_prd.sh  setup_project.sh  vibe.sh  watch.sh
ralph/scripts/lib/: adapter.sh  baseline.sh  cleanup_worktrees.sh  common.sh  compound.sh  config.sh  extract_signatures.py  generate_app_docs.sh  judge.sh  snapshot.sh  stop_ralph_processes.sh  teams.sh  validate_json.sh  vibe.sh
ralph/scripts/tests/: test_eval_injection.bats  test_fix_validation.bats  test_generate_prd_json.py  test_name_collision.bats  test_parallel_exit_codes.bats  test_parallel_ralph.sh  test_pipeline_e2e.py  test_scaffold.bats  test_scoped_checks.bats  test_story_scheduling.bats  test_vibe_json.bats
ralph/scripts/tests/test_helper/: common-setup.bash
src/your_project_name/: README.md  __init__.py
tests/: test_test_001.py
