# TEMPLATE: Replace [PLACEHOLDERS] with your project values after forking.
# Run `make setup_scaffold LANG=python && make setup_toolchain` to initialize.
[project]
name = "ralph-loop"
version = "0.0.1"
description = "Ralph Loop - Self-Evolving Development Loop"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/your_project_name"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "complexipy>=0.6.0",
]
observability = [
    "logfire>=3.16",
    "weave>=0.51",
]

[tool.uv]
package = true
exclude-newer = "2026-01-20T00:00:00Z"

[tool.ruff]
line-length = 100
target-version = "py[PYTHON VERSION SHORT]"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.pyright]
pythonVersion = "[PYTHON VERSION]"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src/your_project_name", "tests"]

[tool.complexipy]
paths = ["src/your_project_name"]
max-complexity-allowed = 15
exclude = ["tests/*"]

[tool.pytest.ini_options]
# Test discovery paths (tests/ for app tests, ralph/scripts/tests/ for Ralph E2E tests only)
testpaths = ["tests", "ralph/scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude E2E tests by default (opt-in with -m e2e)
addopts = "-v --tb=short -m 'not e2e'"
# Custom markers for test categorization (e2e tests are slower, can be skipped in quick validation)
markers = [
    "e2e: end-to-end tests (run explicitly with '-m e2e')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/your_project_name/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-58f4c2"
replace = "version-{new_version}-58f4c2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}
"""
